# pygame_practice

./: .gitignore  Makefile  README.md  pyproject.toml
learning/: 1. base.py  2. draw_different_figures.py  2. simple draw.py  3. keyboard.py  4. mouse click.py  4.1 mouse motion.py  4.2 mouse square.py  4.mouse_practice_work.py  5.surface_three_layers.py  Info.md  colors.py
learning/5_surface/: 5.surface_rocket_areas.py  alpha.py  practice.py
learning/6_rect/: 0.simple.py  1.with_surface.py  2.some_rect_functions.py  3.rect_rockets.py  practice.py
learning/7_font/: 1.moving_text.py  about_fonts.py  following_mouse_text.py  movable_mouse_rect.py
learning/9_sprite/: 0.simple.py
projects/common/: colors.py
projects/common/psysics/: point.py  speed.py  vector.py
projects/flying_balls/: main.py
