[tool.poetry]
name = "pygame_practice"
version = "0.1.0"
description = ""
authors = ["Станислав Бескаев <stanislav.beskaev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
pygame = "^2.1.2"
loguru = "^0.6.0"
pytz = "^2022.4"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
