[tool.poetry]
name = "pygame_practice"
version = "0.1.0"
description = ""
authors = ["Станислав Бескаев <stanislav.beskaev@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
pygame = "^2.1.2"
loguru = "^0.6.0"
pytz = "^2022.4"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.11.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = "True"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
